--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "build": "echo 'No build step required'",
     "build-css": "tailwindcss -i ./public/css/input.css -o ./public/css/style.css --watch"
   },
   "keywords": [
